fix: height issue on mobile

--- a/src/app/(home)/_sections/StMich.module.css
+++ b/src/app/(home)/_sections/StMich.module.css
@@ -1,5 +1,4 @@
 .stMichSection {
-	/* height: 95dvh; */
 	font-family: var(--font-poppins);
 	overflow: hidden;
 }
@@ -14,11 +13,7 @@
 	position: relative;
 
 	@media (width <= 768px) {
-		padding: 4rem 1rem;
-	}
-
-	@media (width <= 640px) {
-		padding: 2rem 1rem;
+		padding-inline: 1rem;
 	}
 }
 
@@ -43,11 +38,38 @@
 	width: 100%;
 	position: relative;
 	margin-inline: auto;
-	padding-inline: 2rem;
-	height: 100dvh;
+	padding: 5vh 2rem;
+	height: calc(80dvh - 10dvh);
+	min-height: 500px;
+	max-height: 900px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
-	@media screen and (max-height: 1400px) and (width <= 1024px) {
-		height: 70dvh;
+	/* iPad Pro and similar large tablets */
+	@media screen and (min-height: 1000px) and (max-height: 1366px) and (width <= 1024px) {
+		height: calc(
+			65dvh - 10dvh
+		); /* Significantly reduced height for tall tablets */
+		max-height: 700px;
+		padding: 4vh 2rem;
+	}
+
+	@media screen and (max-height: 1000px) and (width <= 1024px) {
+		height: calc(70dvh - 10dvh);
+		min-height: 450px;
+	}
+
+	@media screen and (max-height: 800px) {
+		height: calc(80dvh - 10dvh);
+		min-height: 400px;
+		padding: 4dvh 2rem;
+	}
+
+	@media screen and (max-height: 600px) {
+		height: calc(85dvh - 8dvh);
+		min-height: 350px;
+		padding: 3dvh 2rem;
 	}
 
 	.imageContainer {
